package fr.umlv.exo2;

/**
 * @author Steeve Sivanantham
 */
public enum Army {
    SEA, EARTH,SKY,NONE;
}
