package fr.umlv.exo2;

/**
 * @author Steeve Sivanantham
 */
public interface Military {
    int speed();

    int health();

    int fire();

    Army getArmy();
}
